Update SIGMOD preprint link to OSF

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ result: -17.814</span></code></pre>
             In Proceedings of the 2016 ACM SIGMOD International Conference on Management of Data (SIGMOD), pp. 2085-2088, 2016</p>
           </div>
 
-          <p>A preprint version is available <a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" >here</a>. For a complete list of publications, posters, and presentations, please visit <a href="news.html" rel="noopener">News</a>. To reference our Web site, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
+          <p>A preprint version is available <a href="https://osf.io/vc72z/" >here</a>. For a complete list of publications, posters, and presentations, please visit <a href="news.html" rel="noopener">News</a>. To reference our Web site, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
 
           <div class="page-header" id="feedback">
             <h3>Feedback</h3>
