--- a/news.html
+++ b/news.html
@@ -336,7 +336,7 @@ ga('send', 'pageview');
       R. Rampin, F. Chirigati, D. Shasha, J. Freire, and V. Steeves.
       In Journal of Open Source Software (JOSS), 2016</p>
 
-      <p id="sigmod-demo-2016"><i><a href="http://bigdata.poly.edu/~fchirigati/papers/reprozip-sigmod206.pdf" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
+      <p id="sigmod-demo-2016"><i><a href="https://osf.io/vc72z/" target="_blank" rel="noopener">ReproZip: Computational Reproducibility With Ease</a></i>,
       F. Chirigati, R. Rampin, D. Shasha, and J. Freire.
       In Proceedings of the 2016 ACM SIGMOD International Conference on Management of Data (SIGMOD), pp. 2085-2088, 2016</p>
 
