Update Fernando's web page

--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@ result: -17.814</span></code></pre>
 
           <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
           <ul>
-            <li><a href="https://vgc.poly.edu/~fchirigati/" rel="noopener">Fernando Chirigati</a></li>
+            <li><a href="http://fchirigati.com/" rel="noopener">Fernando Chirigati</a></li>
             <li><a href="https://vgc.poly.edu/~juliana/" rel="noopener">Juliana Freire</a></li>
             <li><a href="https://remirampin.com/" rel="noopener">R&eacute;mi Rampin</a></li>
             <li><a href="http://cs.nyu.edu/shasha/" rel="noopener">Dennis Shasha</a></li>
