updated logo, reorg contact and team

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
                 <li><a href="index.html#why">Why ReproZip?</a></li>
                 <li><a href="index.html#examples">Examples</a></li>
                 <li><a href="index.html#citing">Citing ReproZip</a></li>
-                <li><a href="index.html#contact">Contact the Team</a></li>
+		<li><a href="index.html#team">The Team</a></li>
+                <li><a href="index.html#contact">Contact Us</a></li>
               </ul>
             </li>
 
@@ -217,14 +218,10 @@ result: -17.814</span></code></pre>
           </div>
 
           <p>A preprint version is available <a href="https://osf.io/vc72z/" >here</a>. For a complete list of publications, posters, and presentations, please visit <a href="news.html" rel="noopener">News</a>. To reference our Web site, please use <a href="https://www.reprozip.org/" rel="noopener">https://www.reprozip.org</a>.</p>
-
-
-          <div class="page-header" id="contact">
-            <h3>Contact Us</h3>
+	  
+	  <div class="page-header" id="team">
+            <h3>The Team</h3>
           </div>
-
-          <p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>users@reprozip.org</em></a> for feedback, questions, concerns, and issues. Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
-
           <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 
           <table style="height: 100%; width:100%;">
@@ -237,10 +234,20 @@ result: -17.814</span></code></pre>
               <tr>
                 <td><a href="http://fchirigati.com/"><img src="img/fernando.jpg" alt="Fernando Chirigati"/><p>Fernando Chirigati</p></a></td>
                 <td><a href="https://vickysteeves.com"><img src="img/vicky.jpg" alt="Vicky Steeves"/><p>Vicky Steeves</p></a></td>
+                <td><a href="https://www.linkedin.com/in/binalmodi/"><img src="img/stock.png" alt="Binal Modi"/><p>Binal Modi (summer 2018)</p></a></td>
+              </tr>
+	      <tr>
+                <td><a href="https://www.linkedin.com/in/khushnaseeb-ali-96119a45/"><img src="img/stock.png" alt="Khushnaseeb Ali"/><p>Khushnaseeb Ali (summer 2018)</p></a></td>
                 <td><a href="https://www.linkedin.com/in/heng2j"><img src="img/heng.jpg" alt="Heng Li"/><p>Zhonheng Li (summer 2017)</p></a></td>
               </tr>
             </tbody>
           </table>
+
+	<div class="page-header" id="contact">
+            <h3>Contact Us</h3>
+          </div>
+
+          <p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>users@reprozip.org</em></a> for feedback, questions, concerns, and issues. Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
 
         </div><!--end center content-->
 
