Update PyPI links to pypi.org

--- a/news.html
+++ b/news.html
@@ -92,11 +92,11 @@
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">PyPI Packages<span class="caret"></span></a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="https://pypi.python.org/pypi/reprozip" rel="noopener">reprozip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip" rel="noopener">reprounzip</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-docker" rel="noopener">reprounzip-docker</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vagrant" rel="noopener">reprounzip-vagrant</a></li>
-                <li><a href="https://pypi.python.org/pypi/reprounzip-vistrails" rel="noopener">reprounzip-vistrails</a></li>
+                <li><a href="https://pypi.org/project/reprozip/" rel="noopener">reprozip</a></li>
+                <li><a href="https://pypi.org/project/reprounzip/" rel="noopener">reprounzip</a></li>
+                <li><a href="https://pypi.org/project/reprounzip-docker/" rel="noopener">reprounzip-docker</a></li>
+                <li><a href="https://pypi.org/project/reprounzip-vagrant/" rel="noopener">reprounzip-vagrant</a></li>
+                <li><a href="https://pypi.org/project/reprounzip-vistrails/" rel="noopener">reprounzip-vistrails</a></li>
               </ul>
             </li><!--end dropdown-->
 
