--- a/index.html
+++ b/index.html
@@ -230,8 +230,8 @@ result: -17.814</span></code></pre>
           <table style="height: 100%; width:100%;">
             <tbody>
               <tr>
-                <td><a href="http://vgc.poly.edu/~juliana/"><img src="img/juliana.jpg" alt="Juliana Freire"/><p>Juliana Freire</p></a></td>
-                <td><a href="http://www.cs.nyu.edu/shasha/"><img src="img/dennis.jpg" alt="Dennis Shasha"/><p>Dennis Shasha</p></a></td>
+                <td><a href="https://vgc.poly.edu/~juliana/"><img src="img/juliana.jpg" alt="Juliana Freire"/><p>Juliana Freire</p></a></td>
+                <td><a href="https://cs.nyu.edu/shasha/"><img src="img/dennis.jpg" alt="Dennis Shasha"/><p>Dennis Shasha</p></a></td>
                 <td><a href="https://remirampin.com"><img src="img/remi.jpg" alt="Remi Rampin"/><p>Rémi Rampin</p></a></td>
               </tr>
               <tr>
