--- a/news.html
+++ b/news.html
@@ -247,13 +247,13 @@
 
       <h4>2013</h4>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/papers/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
       F. Chirigati, D. Shasha, and J. Freire.
       In Proceedings of the 2013 International Conference on Management of Data (SIGMOD), pp. 977-980, 2013
       <br/>
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i>,
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/papers/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i>,
       F. Chirigati, D. Shasha, and J. Freire.
       In Proceedings of the 5th USENIX conference on Theory and Practice of Provenance (TaPP), 2013
       <br/>
@@ -348,14 +348,14 @@
 
       <h4>2013</h4>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-WorkshopReproducibleScience.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/presentations/ReproZip-WorkshopReproducibleScience.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
       Workshop on Software Infrastructure for Reproducibility in Science<br/>
       Presented by Fernando Chirigati<br/>
       Brooklyn, NY, May 2013
       <br/>
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i><br/>
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/presentations/chirigati-tapp2013.pdf" target="_blank" rel="noopener">ReproZip: Using Provenance to Support Computational Reproducibility</a></i><br/>
       The 5th USENIX conference on Theory and Practice of Provenance (TaPP)<br/>
       Presented by Juliana Freire
       [<a href="https://www.usenix.org/conference/tapp13/technical-sessions/presentation/chirigati" target="_blank" rel="noopener">video</a>]<br/>
@@ -363,7 +363,7 @@
       <br/>
       <b><i>This is related to ReproZip's <a href="https://github.com/fchirigati/reprozip" target="_blank" rel="noopener">deprecated version</a>.</i></b></p>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/BTPDF2-2013.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/presentations/BTPDF2-2013.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
       Beyond the PDF 2 Conference - Visions for the Future Session<br/>
       Presented by Fernando Chirigati<br/>
       Amsterdam, Netherlands, March 2013
@@ -372,7 +372,7 @@
 
       <h4>2012</h4>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/presentations/ReproZip-ICERM.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/presentations/ReproZip-ICERM.pdf" target="_blank" rel="noopener">ReproZip: Packing Experiments for Sharing and Publication</a></i><br/>
       ICERM Workshop on Reproducibility in Computational and Experimental Mathematics - Lightning Talk<br/>
       Presented by Fernando Chirigati<br/>
       Providence, RI, December 2012
@@ -406,7 +406,7 @@
 
       <h4>2013</h4>
 
-      <p><i><a href="http://bigdata.poly.edu/~fchirigati/posters/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
+      <p><i><a href="https://bigdata.poly.edu/~fchirigati/posters/chirigati-sigmod2013.pdf" target="_blank" rel="noopener">Packing Experiments for Sharing and Publication</a></i>,
       F. Chirigati, D. Shasha, and J. Freire.
       International Conference on Management of Data (SIGMOD), 2013
       <br/>
@@ -417,7 +417,7 @@
 
     <footer class="footer">
       <div class="container">
-        <p>ReproZip is under development at <a href="http://engineering.nyu.edu/">NYU</a> by the <abbr title="Visualization and Data Analytics">ViDA group</abbr>.</p>
+        <p>ReproZip is under development at <a href="https://engineering.nyu.edu/">NYU</a> by the <abbr title="Visualization and Data Analytics">ViDA group</abbr>.</p>
         <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt">BSD</a>.</p>
       </div>
     </footer>
