--- a/news.html
+++ b/news.html
@@ -149,7 +149,7 @@
         </tr>
         <tr>
           <td class="date"><b>[Jan 26, 2017]</b></td>
-          <td class="news">ReproZip will be presented at <a href="http://events.brainhack.org/global2017/locations.html#NYC" target="_blank" rel="noopener">Brainhack NYC</a>.</td>
+          <td class="news">ReproZip will be presented at <a href="http://www.brainhack.org/global2017/index.html#details" target="_blank" rel="noopener">Brainhack NYC</a>.</td>
         </tr>
         <tr>
           <td class="date"><b>[Jan 10, 2017]</b></td>
@@ -157,7 +157,7 @@
         </tr>
         <tr>
           <td class="date"><b>[Dec 02, 2016]</b></td>
-          <td class="news">Our paper was accepted at JOSS! <a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">Check it out!</a></td>
+          <td class="news">Our paper was accepted at JOSS! <a href="https://doi.org/10.21105/joss.00107" target="_blank">Check it out!</a></td>
         </tr>
         <tr>
           <td class="date"><b>[Oct 07, 2016]</b></td>
@@ -169,11 +169,11 @@
         </tr>
         <tr>
           <td class="date"><b>[July 27, 2016]</b></td>
-          <td class="news">ReproZip will be demoed at <a href="http://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td>
+          <td class="news">ReproZip will be demoed at <a href="https://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td>
         </tr>
         <tr>
           <td class="date"><b>[July 01, 2016]</b></td>
-          <td class="news">ReproZip will be presented at the <a href="http://www.pasignyc.org/" target="_blank" rel="noopener">PASIG Fall 2016 meeting</a>.</td>
+          <td class="news">ReproZip will be presented at the <a href="https://library.stanford.edu/projects/preservation-and-archiving-special-interest-group/international-meetings/october-2016-new" target="_blank" rel="noopener">PASIG Fall 2016 meeting</a>.</td>
         </tr>
         <tr>
           <td class="date"><b>[Jun 25, 2016]</b></td>
@@ -217,7 +217,7 @@
         </tr>
         <tr>
           <td class="date"><b>[June, 2015]</b></td>
-          <td class="news">ReproZip is the recommended tool for the Reproducibility Section of the <a href="http://www.journals.elsevier.com/information-systems/" target="_blank" rel="noopener">Information Systems Journal, Elsevier</a>.</td>
+          <td class="news">ReproZip is the recommended tool for the Reproducibility Section of the <a href="https://www.journals.elsevier.com/information-systems/" target="_blank" rel="noopener">Information Systems Journal, Elsevier</a>.</td>
         </tr>
         <tr>
           <td class="date"><b>[May, 2015]</b></td>
@@ -231,13 +231,13 @@
       </div>
 
       <h4>2017</h4>
-      <p><i><a href="https://dx.doi.org/10.17605/OSF.IO/5TM8D" target="_blank">Using ReproZip for Reproducibility and Library Services</a></i>,
+      <p><i><a href="https://doi.org/10.17605/OSF.IO/5TM8D" target="_blank">Using ReproZip for Reproducibility and Library Services</a></i>,
       V. Steeves, R. Rampin, and F. Chirigati.
       Pre-print available via the LIS Scholarship Archive (LISSA), 2017</p>
 
       <h4>2016</h4>
 
-      <p><i><a href="http://dx.doi.org/10.21105/joss.00107" target="_blank">ReproZip: The Reproducibility Packer</a></i>,
+      <p><i><a href="http://doi.org/10.21105/joss.00107" target="_blank">ReproZip: The Reproducibility Packer</a></i>,
       R. Rampin, F. Chirigati, D. Shasha, J. Freire, and V. Steeves.
       In Journal of Open Source Software (JOSS), 2016</p>
 
@@ -266,12 +266,12 @@
 
       <h4>2017</h4>
 
-      <p><i><a href="https://vickysteeves.gitlab.io/2017-SciPy/#/" target="_blank" rel="noopener">Creating Reproducible Experiments with ReproZip</a></i><br/>
+      <p><i><a href="https://vickysteeves.gitlab.io/2017-SciPy/" target="_blank" rel="noopener">Creating Reproducible Experiments with ReproZip</a></i><br/>
       <a href="https://scipy2017.scipy.org" target="_blank" rel="noopener">SciPy 2017</a><br/>
       Presented by Vicky Steeves and R&eacute;mi Rampin<br/>
       Austin, Texas, July 2017</p>
 
-      <p><i><a href="https://vickysteeves.gitlab.io/2017-IASSIST-ReproZip/#/" target="_blank" rel="noopener">Reproducing and Preserving Research with ReproZip</a></i><br/>
+      <p><i><a href="https://vickysteeves.gitlab.io/2017-IASSIST-ReproZip/" target="_blank" rel="noopener">Reproducing and Preserving Research with ReproZip</a></i><br/>
       <a href="http://www.iassist2017.org/" target="_blank" rel="noopener">IASSIST 2017</a><br/>
       Presented by Vicky Steeves and R&eacute;mi Rampin<br/>
       Lawrence, Kansas, May 2017</p>
@@ -287,19 +287,19 @@
       Vienna, Austria, April 2017</p>
 
       <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/7qmsa/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i><br/>
-      <a href="http://events.brainhack.org/global2017/locations.html#NYC" target="_blank">Brainhack NYC</a><br/>
+      <a href="http://www.brainhack.org/global2017/index.html#details" target="_blank">Brainhack NYC</a><br/>
       Presented by Fernando Chirigati<br/>
       New York City, NY, March 2017</p>
 
       <h4>2016</h4>
 
       <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/qbu6s/?action=download%26mode=render" target="_blank" rel="noopener">Preserving and Reproducing Research with ReproZip</a></i><br/>
-      Preservation and Archiving Special Interest Group (PASIG), <a href="http://www.pasignyc.org/" target="_blank">Fall 2016 Meeting</a><br/>
+      Preservation and Archiving Special Interest Group (PASIG), <a href="https://library.stanford.edu/projects/preservation-and-archiving-special-interest-group/international-meetings/october-2016-new" target="_blank">Fall 2016 Meeting</a><br/>
       Presented by Fernando Chirigati<br/>
       New York City, NY, October 2016</p>
 
       <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/p8pjd/?action=download%26mode=render" target="_blank" rel="noopener">Provenance for Computational Reproducibility and Beyond</a></i><br/>
-      <a href="http://rdi2.rutgers.edu/event/rdi2-workshop-reproducibility-experimental-and-computational-science-resarch-1" target="_blank" rel="noopener">RDI2 Workshop: Reproducibility in Experimental and Computational Science Research</a><br/>
+      <a href="https://rdi2.rutgers.edu/event/rdi2-workshop-reproducibility-experimental-and-computational-science-resarch-1" target="_blank" rel="noopener">RDI2 Workshop: Reproducibility in Experimental and Computational Science Research</a><br/>
       Presented by Juliana Freire<br/>
       Rutgers University, October 2016</p>
 
@@ -309,7 +309,7 @@
       University of Notre Dame, May 2016</p>
 
       <p><i>ReproZip: Computational Reproducibility with Ease</i><br/>
-      <a href="http://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank" rel="noopener">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science<br/>
+      <a href="https://www.dagstuhl.de/de/programm/kalender/semhp/?semnr=16041" target="_blank" rel="noopener">Dagstuhl Seminar 16041</a>, Reproducibility of Data-Oriented Experiments in e-Science<br/>
       Presented by Fernando Chirigati<br/>
       Wadern, Germany, January 2016</p>
 
@@ -325,7 +325,7 @@
       Presented by R&eacute;mi Rampin<br/>
       Suncadia, WA, October 2015</p>
 
-      <p><i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank" rel="noopener">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
+      <p><i><a href="https://cs.nyu.edu/cs/faculty/shasha/papers/att_shasha_oct10_2015_dennis.ppt" target="_blank" rel="noopener">Liquid Version Climber: a Reproducibility-based Approach for Upgrading Complex Software</a></i><br/>
       AT&amp;T Labs Research<br/>
       Presented by Dennis Shasha<br/>
       New York City, NY, October 2015</p>
@@ -338,10 +338,10 @@
       <p><i><a href="https://osf.io/a85kx/" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i><br/>
       Reproducibility Seminar, University of Washington<br/>
       Presented by Fernando Chirigati
-      [<a href="https://panopto.uw.edu/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank" rel="noopener">video</a>]<br/>
+      [<a href="https://uw.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank" rel="noopener">video</a>]<br/>
       Seattle, WA, May 2015</p>
 
-      <p><i><a href="http://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank" rel="noopener">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
+      <p><i><a href="https://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank" rel="noopener">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
       DigiCosme, ENSTA ParisTech<br/>
       Presented by Dennis Shasha<br/>
       Paris, France, May 2015</p>
