--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ result: -17.814</span></code></pre>
 
           <p>Contact us at <a href="https://vgc.poly.edu/mailman/listinfo/reprozip-users"><em>users@reprozip.org</em></a> for feedback, questions, concerns, and issues. Also, please use this mailing list to <b>share your use cases</b> with us, as well as to report on best practices and lessons learned for reproducibility!</p>
 
-          <p>ReproZip is currently being developed at <a href="http://engineering.nyu.edu/">NYU</a>. The team includes:</p>
+          <p>ReproZip is currently being developed at <a href="https://engineering.nyu.edu/">NYU</a>. The team includes:</p>
 
           <table style="height: 100%; width:100%;">
             <tbody>
@@ -257,7 +257,7 @@ result: -17.814</span></code></pre>
 
     <footer class="footer">
       <div class="container">
-        <p>ReproZip is under development at <a href="http://engineering.nyu.edu/" rel="noopener">NYU</a> by the <a href="https://vida.engineering.nyu.edu/"><abbr title="Visualization and Data Analytics">ViDA group</abbr></a>.</p>
+        <p>ReproZip is under development at <a href="https://engineering.nyu.edu/" rel="noopener">NYU</a> by the <a href="https://vida.engineering.nyu.edu/"><abbr title="Visualization and Data Analytics">ViDA group</abbr></a>.</p>
         <p>Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt" rel="noopener">BSD</a>.</p>
       </div>
     </footer>
