Added PDF version of EGU slides to OSF

--- a/news.html
+++ b/news.html
@@ -281,7 +281,7 @@
       Presented by Vicky Steeves and R&eacute;mi Rampin<br/>
       University of Notre Dame, May 2017</p>
 
-      <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/hzj5g/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip for Geospatial Research</a></i><br/>
+      <p><i><a href="https://mfr.osf.io/render?url=https://osf.io/aef7j/?action=download%26mode=render" target="_blank" rel="noopener">ReproZip for Geospatial Research</a></i><br/>
       <a href="http://egu2017.eu/home.html" target="_blank">European Geosciences Union (EGU) General Assembly</a><br/>
       Presented by R&eacute;mi Rampin and Vicky Steeves<br/>
       Vienna, Austria, April 2017</p>
