Put UW presentation videos on YouTube

--- a/news.html
+++ b/news.html
@@ -338,7 +338,7 @@
       <p><i><a href="https://osf.io/a85kx/" target="_blank" rel="noopener">Facilitating Reproducibility After the Fact</a></i><br/>
       Reproducibility Seminar, University of Washington<br/>
       Presented by Fernando Chirigati
-      [<a href="https://uw.hosted.panopto.com/Panopto/Pages/Viewer.aspx?id=2b52fcef-65ed-7649-ad8e-7b4d07dbc341" target="_blank" rel="noopener">video</a>]<br/>
+      [<a href="https://www.youtube.com/watch?v=HlnUWXQR-2Y" target="_blank" rel="noopener">part 1</a>, <a href="https://www.youtube.com/watch?v=B-EUgg3Bi9A" target="_blank" rel="noopener">part 2</a>]<br/>
       Seattle, WA, May 2015</p>
 
       <p><i><a href="https://cs.nyu.edu/cs/faculty/shasha/papers/shasha_digicosme.pptx" target="_blank" rel="noopener">Computational Reproducibility: Why Needed, First Tools, Open Problems</a></i><br/>
