added cards for yt videos, removed news page

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		      </div>
 		    </li><!--end about dropdown-->
         
-        <li class="nav-item"><a class="nav-link" href="news.html">News & Scholarship</a></li>
+        <li class="nav-item"><a class="nav-link" href="schol.html">Scholarship</a></li>
         
         <!--JOBS DROP DOWN-->
         <li class="nav-item dropdown">
@@ -102,7 +102,7 @@
       <div class="jumbotron">
         <div class="container">
           <h1 class="display-4">Full computational reproducibility!</h1>
-          <p class="lead">ReproZip allows you to pack your research along with all necessary data files, libraries, environment variables and options.  Then anybody can reproduce the research on a different machine, without tracking down and installing the dependencies, or even having to run the same operating system!</p>
+          <p class="lead">ReproZip can automatically pack your research along with all necessary data files, libraries, environment variables and options into a self-contained bundle. Then ReproZip can use that bundle to automatically set up the same original environment so anybody can reproduce the research on a different machine, without tracking down and installing the dependencies, or even having to run the same operating system!</p>
           <br/>
           <p><a class="btn btn-primary btn-lg" href="about.html" role="button">Learn more &raquo;</a></p>
         </div>
@@ -122,7 +122,7 @@
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">Free & Open Source</h3>
-              <p class="card-text">The development of ReproZip was always been open source and free to use. We encourage a transparent process to eliminate the black-box of development. We encourage folks to submit pull requests or issues with any feature requests or bug reports!</p>
+              <p class="card-text">The development of ReproZip has always been open source and free to use since the project began in 2013. We welcome and encourage anyone to submit pull requests or issues with any feature requests or bug reports!</p>
             </div>
             <div class="card-footer">
               <a class="btn btn-outline-primary" href="https://github.com/ViDA-NYU/reprozip" role="button">Check out the GitHub repo &raquo;</a>
@@ -131,7 +131,7 @@
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">Extensible</h3>
-              <p class="card-text">ReproZip has been used to capture a wide variety of digital materials, from desktop applications to scripts in various languages to dynamic websites to high performance computing experiments. You can then reproduce your work across various OS's!</p>
+              <p class="card-text">ReproZip has been used to capture a wide variety of digital materials, from desktop applications and scripts in various languages to dynamic websites to high performance computing experiments. You can then reproduce your work across various OS's!</p>
             </div>
             <div class="card-footer">
               <a class="btn btn-outline-primary" href="https://examples.reprozip.org" role="button">Explore some examples &raquo;</a>
