--- a/news.html
+++ b/news.html
@@ -169,7 +169,7 @@
         </tr>
         <tr>
           <td class="date"><b>[July 27, 2016]</b></td>
-          <td class="news">ReproZip will be demoed at <a href="https://www.summit.nycmedialab.org/" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td>
+          <td class="news">ReproZip will be demoed at <a href="https://nycmedialab.org/events/nycml16" target="_blank" rel="noopener">NYC Media Lab 2016</a>.</td>
         </tr>
         <tr>
           <td class="date"><b>[July 01, 2016]</b></td>
@@ -209,7 +209,7 @@
         </tr>
         <tr>
           <td class="date"><b>[Nov 06, 2015]</b></td>
-          <td class="news">ReproZip is listed on the <a href="http://www.artifact-eval.org/guidelines.html" target="_blank" rel="noopener">Artifact Evaluation Process guidelines</a>.</td>
+          <td class="news">ReproZip is listed on the <a href="https://www.artifact-eval.org/guidelines.html" target="_blank" rel="noopener">Artifact Evaluation Process guidelines</a>.</td>
         </tr>
         <tr>
           <td class="date"><b>[Oct 26, 2015]</b></td>
