--- a/about.html
+++ b/about.html
@@ -212,13 +212,13 @@
 
     <p>If you'd like to contribute to the development of ReproZip, please read our <a href="https://github.com/ViDA-NYU/reprozip/blob/1.0.x/CONTRIBUTING.md">CONTRIBUTING.md</a> file in the ReproZip GitHub repository. Please note we also have a <a href="https://github.com/ViDA-NYU/reprozip/blob/1.0.x/CODE_OF_CONDUCT.md">CODE_OF_CONDUCT.md</a> which we ask contributors and maintainers abide by.</p>
 
-    <p>We have a number of GitHub issues tagged as <a href="https://github.com/ViDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3A%22A-help+wanted%22">help-wanted</a>, <a href="https://github.com/ViDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3AA-question">a-question</a>, and <a href="https://github.com/ViDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22">good-first-issue</a>. We are hoping that organizing the issues this way will encourage folks of all levels to participate to the development of ReproZip, from those who contribute through discussion around questions, newcomers looking for a good first issue to work on, and developers comfortable looking through a project to write code back.</p>
+    <p>We have a number of GitHub issues tagged as <a href="https://github.com/ViDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3A%22A-help+wanted%22">help-wanted</a>, <a href="https://github.com/ViDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3AA-question">question</a>, and <a href="https://github.com/ViDA-NYU/reprozip/issues?q=is%3Aopen+is%3Aissue+label%3A%22good+first+issue%22">good-first-issue</a>. We are hoping that organizing the issues this way will encourage folks of all levels to participate to the development of ReproZip, from those who contribute through discussion around questions, newcomers looking for a good first issue to work on, and developers comfortable looking through a project to write code back.</p>
 
     <p></p>
     
     <br/>
     <div id="ack"><h2>Acknowledgements</h2></div>  
-      <p> The development of ReproZip has been supported by <a href="https://msdse.org">the Moore and Sloan Foundations</a>, under the <a href="https://cds.nyu.edu/mooresloan">NYU Moore-Sloan Data Science Environment</a>.</p>
+      <p> The development of ReproZip has been supported by <a href="http://msdse.org">the Moore and Sloan Foundations</a>, under the <a href="https://cds.nyu.edu/mooresloan/">NYU Moore-Sloan Data Science Environment</a>.</p>
       
     <hr>
 
