--- a/schol.html
+++ b/schol.html
@@ -158,7 +158,7 @@
     
       <h4>2018</h4>
     
-      <p><i><a href="https://osf.io/6hvpt" target="_blank" rel="noopener"> Best practices for reproducible research using ReproZip</a></i>, 
+      <p><i><a href="https://osf.io/6hvpt/" target="_blank" rel="noopener"> Best practices for reproducible research using ReproZip</a></i>, 
       <a href="https://www.cfa.harvard.edu/" target="_blank" rel="noopener">Harvard-Smithsonian Center for Astrophysics</a>,
       presented by Vicky Steeves, 
       Cambridge, Massachusetts, October 2018.</p>
