added correct path to font, added link in card footer, removed old glyphs

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <p class="card-text">ReproZip works locally on your computer, server, or high performance computing clusters. Once you make an <code>.rpz</code> bundle, you can reproduce it with a variety of unpacker plug-ins (e.g. Docker, Vagrant, Singularity) or in the cloud with <a href="https://github.com/vida-nyu/reproserver">ReproServer</a>.</p>
             </div>
             <div class="card-footer">
-              <a class="btn btn-outline-primary" href="#" role="button"> Try out ReproZip today &raquo;</a>
+              <a class="btn btn-outline-primary" href="https://docs.reprozip.org/en/1.0.x/install.html" role="button"> Try out ReproZip today &raquo;</a>
             </div>
           </div>
           <div class="card">
