--- a/reprozip-dev-job.html
+++ b/reprozip-dev-job.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ReproZip is a tool that simplifies the process of creating reproducible experiments from command-line executions, a frequent task in computational science.">
-    <meta name="author" content="ViDA at NYU">
+    <meta name="author" content="VIDA at NYU">
     <link rel="icon" href="imgs/favicon.ico">
 
     <title>ReproZip Dev Job</title>
@@ -73,7 +73,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="http://reprozip-files.s3-website-us-east-1.amazonaws.com/windows-installer">Windows <i class="fas fa-download"></i></a></li>
             <li><a class="dropdown-item" href="http://reprozip-files.s3-website-us-east-1.amazonaws.com/mac-installer">macOS <i class="fas fa-download"></i></a></li>
-            <li><a class="dropdown-item" href="https://anaconda.org/ViDA-NYU" rel="noopener">Anaconda  <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a class="dropdown-item" href="https://anaconda.org/VIDA-NYU" rel="noopener">Anaconda  <i class="fas fa-external-link-alt"></i></a></li>
             <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">PyPI Packages <i class="fas fa-external-link-alt"></i></a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="https://pypi.org/project/reprozip/" rel="noopener">reprozip</a></li>
@@ -91,7 +91,7 @@
 		  </ul><!--end left navbar-->
 			<!-- right navbar -->
 			<ul class="nav navbar-nav ml-auto">
-			  <li class="nav-item"><a class="nav-link" href="https://github.com/ViDA-NYU/reprozip"><i class="fab fa-github-square"></i></a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://github.com/VIDA-NYU/reprozip"><i class="fab fa-github-square"></i></a></li>
         <li class="nav-item"><a class="nav-link" href="https://twitter.com/search?q=ReproZip"><i class="fab fa-twitter-square"></i></a></li>
         <li class="nav-item"><a class="nav-link" href="mailto:users@reprozip.org"><i class="fas fa-envelope-square"></i></a></li>
 	  </ul><!--end right navbar-->
@@ -108,7 +108,7 @@
   <h2>INTRODUCTION</h2>
   <p>New York Univeristy has a vibrant data science and engineering community that includes such centers and programs such as the Tandon School of Engineering, the Courant Institute of Mathematical Science, the Center for Urban Science and Progress (CUSP), and the Center for Data Science (CDS). Researchers from different domains collaborate on solving society's problems while contributing to open research software and data.</p>
     
-    <p>This position is situated in the <a href="https://vida.engineering.nyu.edu/">Visualization and Data Analytics</a> (ViDA) Laboratory at New York University Tandon School of Engineering. ViDA conducts research on a variety of topics such as data management, information visualization, image analysis, web domain discovery, and provenance management, with applications to many practical problems, including solutions to the "reproducibility crisis," fighting crime online, baseball analytics, and disease spread.</p>
+    <p>This position is situated in the <a href="https://vida.engineering.nyu.edu/">Visualization, Imaging, and Data Analytics</a> (VIDA) Laboratory at New York University Tandon School of Engineering. VIDA conducts research on a variety of topics such as data management, information visualization, image analysis, web domain discovery, and provenance management, with applications to many practical problems, including solutions to the "reproducibility crisis," fighting crime online, baseball analytics, and disease spread.</p>
 
   <h2>DESCRIPTION</h2>
   <p>We are looking for a talented developer who is passionate about creating open tools and infrastructure to support reproducible research. Candidates will contribute to the development of open source software for research reproducibility and will work with like-minded and very talented research scientists, faculty, and students to build tools that will transform and streamline scientific discovery and improve the research reproducibility.</p>
@@ -164,7 +164,7 @@
     </main>
 
     <footer class="container">
-      <p>ReproZip is under development at <a href="https://engineering.nyu.edu/" rel="noopener">NYU</a> by the <a href="https://vida.engineering.nyu.edu/"><abbr title="Visualization and Data Analytics">ViDA group</abbr></a>. Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt" rel="noopener">BSD</a>. <span class="text-right"><a href="https://github.com/ViDA-NYU/reprozip"><i class="fab fa-github-square"></i></a> <a href="https://twitter.com/search?q=ReproZip"><i class="fab fa-twitter-square"></i></a> <a href="mailto:users@reprozip.org"><i class="fas fa-envelope-square"></i></a></span></p>
+      <p>ReproZip is under development at <a href="https://engineering.nyu.edu/" rel="noopener">NYU</a> by the <a href="https://vida.engineering.nyu.edu/"><abbr title="Visualization, Imaging, and Data Analytics">VIDA group</abbr></a>. Code licensed under <a href="https://github.com/VIDA-NYU/reprozip/blob/master/LICENSE.txt" rel="noopener">BSD</a>. <span class="text-right"><a href="https://github.com/VIDA-NYU/reprozip"><i class="fab fa-github-square"></i></a>  <a href="https://twitter.com/search?q=ReproZip"><i class="fab fa-twitter-square"></i></a>  <a href="mailto:users@reprozip.org"><i class="fas fa-envelope-square"></i></a></span></p>
     </footer>
 
     <!-- Bootstrap core JavaScript
