--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="ReproZip is a tool that simplifies the process of creating reproducible experiments from command-line executions, a frequent task in computational science.">
-    <meta name="author" content="ViDA at NYU">
+    <meta name="author" content="VIDA at NYU">
     <link rel="icon" href="imgs/favicon.ico">
 
     <title>ReproZip! The Reproducibility Packer</title>
@@ -73,7 +73,7 @@
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <li><a class="dropdown-item" href="http://reprozip-files.s3-website-us-east-1.amazonaws.com/windows-installer">Windows <i class="fas fa-download"></i></a></li>
             <li><a class="dropdown-item" href="http://reprozip-files.s3-website-us-east-1.amazonaws.com/mac-installer">macOS <i class="fas fa-download"></i></a></li>
-            <li><a class="dropdown-item" href="https://anaconda.org/ViDA-NYU" rel="noopener">Anaconda  <i class="fas fa-external-link-alt"></i></a></li>
+            <li><a class="dropdown-item" href="https://anaconda.org/VIDA-NYU" rel="noopener">Anaconda  <i class="fas fa-external-link-alt"></i></a></li>
             <li class="dropdown-submenu"><a class="dropdown-item dropdown-toggle" href="#">PyPI Packages <i class="fas fa-external-link-alt"></i></a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="https://pypi.org/project/reprozip/" rel="noopener">reprozip</a></li>
@@ -90,7 +90,7 @@
 		  </ul><!--end left navbar-->
 			<!-- right navbar -->
 			<ul class="nav navbar-nav ml-auto">
-			  <li class="nav-item"><a class="nav-link" href="https://github.com/ViDA-NYU/reprozip"><i class="fab fa-github-square"></i></a></li>
+			  <li class="nav-item"><a class="nav-link" href="https://github.com/VIDA-NYU/reprozip"><i class="fab fa-github-square"></i></a></li>
         <li class="nav-item"><a class="nav-link" href="https://twitter.com/search?q=ReproZip"><i class="fab fa-twitter-square"></i></a></li>
         <li class="nav-item"><a class="nav-link" href="mailto:users@reprozip.org"><i class="fas fa-envelope-square"></i></a></li>
 	  </ul><!--end right navbar-->
@@ -113,7 +113,7 @@
           <div class="card">
             <div class="card-body">
               <h3 class="card-title">No lock-in</h3>
-              <p class="card-text">ReproZip works locally on your computer, server, or high performance computing clusters. Once you make an <code>.rpz</code> bundle, you can reproduce it with a variety of unpacker plug-ins (e.g. Docker, Vagrant, Singularity) or in the cloud with <a href="https://github.com/ViDA-NYU/reproserver">ReproServer</a>.</p>
+              <p class="card-text">ReproZip works locally on your computer, server, or high performance computing clusters. Once you make an <code>.rpz</code> bundle, you can reproduce it with a variety of unpacker plug-ins (e.g. Docker, Vagrant, Singularity) or in the cloud with <a href="https://github.com/VIDA-NYU/reproserver">ReproServer</a>.</p>
             </div>
             <div class="card-footer">
               <a class="btn btn-outline-primary" href="https://docs.reprozip.org/en/1.0.x/install.html" role="button"> Try out ReproZip today &raquo;</a>
@@ -125,7 +125,7 @@
               <p class="card-text">The development of ReproZip has always been open source and free to use since the project began in 2013. We welcome and encourage anyone to submit pull requests or issues with any feature requests or bug reports!</p>
             </div>
             <div class="card-footer">
-              <a class="btn btn-outline-primary" href="https://github.com/ViDA-NYU/reprozip" role="button">Check out the GitHub repo &raquo;</a>
+              <a class="btn btn-outline-primary" href="https://github.com/VIDA-NYU/reprozip" role="button">Check out the GitHub repo &raquo;</a>
             </div> 
           </div>
           <div class="card">
@@ -144,7 +144,7 @@
       </div> <!-- /container -->
 
     <footer class="container">
-      <p>ReproZip is under development at <a href="https://engineering.nyu.edu/" rel="noopener">NYU</a> by the <a href="https://vida.engineering.nyu.edu/"><abbr title="Visualization and Data Analytics">ViDA group</abbr></a>. Code licensed under <a href="https://github.com/ViDA-NYU/reprozip/blob/master/LICENSE.txt" rel="noopener">BSD</a>.  <span class="text-right"><a href="https://github.com/ViDA-NYU/reprozip"><i class="fab fa-github-square"></i></a>  <a href="https://twitter.com/search?q=ReproZip"><i class="fab fa-twitter-square"></i></a>  <a href="mailto:users@reprozip.org"><i class="fas fa-envelope-square"></i></a></span></p>
+      <p>ReproZip is under development at <a href="https://engineering.nyu.edu/" rel="noopener">NYU</a> by the <a href="https://vida.engineering.nyu.edu/"><abbr title="Visualization, Imaging, and Data Analytics">VIDA group</abbr></a>. Code licensed under <a href="https://github.com/VIDA-NYU/reprozip/blob/master/LICENSE.txt" rel="noopener">BSD</a>. <span class="text-right"><a href="https://github.com/VIDA-NYU/reprozip"><i class="fab fa-github-square"></i></a>  <a href="https://twitter.com/search?q=ReproZip"><i class="fab fa-twitter-square"></i></a>  <a href="mailto:users@reprozip.org"><i class="fas fa-envelope-square"></i></a></span></p>
     </footer>
 
     <!-- Bootstrap core JavaScript
