--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     <nav class="navbar navbar-expand-md navbar-inverse bg-inverse">
       <div class="container">
        <a class="navbar-brand" href="index.html"><img alt="ReproZip" src="imgs/navbar-logo.png"></a>
-  	  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+       <button class="navbar-toggle navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		  
         <ul class="navbar-nav mr-auto">
         
