--- a/schol.html
+++ b/schol.html
@@ -59,13 +59,13 @@
 
             <li class="nav-item active"><a class="nav-link" href="#"><span class="sr-only">(current)</span>Scholarship</a></li>
 
-            <!--JOBS DROP DOWN-->
+            <!--JOBS DROP DOWN
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Open Jobs</a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <a class="dropdown-item" href="reprozip-dev-job.html" rel="noopener">ReproZip Developer</a>
               </div>
-            </li><!--end jobs dropdown-->
+            </li>end jobs dropdown-->
 
             <!--INSTALLERS DROP DOWN-->
             <li class="nav-item dropdown">
